--- a/src/App.scss
+++ b/src/App.scss
@@ -138,6 +138,11 @@ body {
       flex-direction: row;
       overflow-y: hidden;
       overflow-x: scroll;
+      .event-card {
+        width: 200px;
+        margin: 0 3px
+      }
+
       &::-webkit-scrollbar {
         width: 0px;
       }
@@ -147,7 +152,8 @@ body {
   .event-card {
     height: fit-content;
     position: relative;
-    
+
+
     .link-icon {
      font-size: 25px;
      background-color: $dark;
@@ -188,6 +194,9 @@ body {
   font-size: 25px;
   font-weight: bold;
   letter-spacing: 1px;
+  @media (max-width: 800px) {
+    font-size: 20px;
+  }
 }
 .text-sm {
   font-size: 15px;
@@ -207,4 +216,10 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.dash {
+  @media(max-width: 800px) {
+    display: none;
+  }
 }
